devops/prod/conta-kubernetes-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    expose: "true"
    app: conta
    provider: fabric8
    group: io.github.diegolirio
  name: conta    
spec:
  ports:
  - nodePort: 30081
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: conta
    provider: fabric8
    group: io.github.diegolirio
  type: LoadBalancer
