devops/prod/conta-kubernetes-destination-rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: conta
spec:
  host: conta
  subsets:
  - name: conta-v1
    labels:
      version: 0.0.7-SNAPSHOT
  - name: conta-v2
    labels:
      version: 0.0.9-RELEASE

# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# .........
# spec:
#   host: product-page-svc.bookinfo-k8s-helm-istio-canary.svc.cluster.local
# .......
#   subsets:
#   - name: production
#     labels:
#       canary: "false"
#   - name: canary
#     labels:
#       canary: "true"

# ---
